--- a/public/views/form.ejs
+++ b/public/views/form.ejs
@@ -80,12 +80,40 @@
                     </select>
                 </div>
                 <div class="col-md-6 form-check">
-                    <input type="checkbox" class="form-check-input" id="quote" name="quote" />
-                    <label for="quote" class="form-check-label">Include Quote Section</label>
+                    <input type="checkbox" class="form-check-input" id="quoteBool" name="quoteBool" />
+                    <label for="quoteBool" class="form-check-label">Include Quote Section</label>
                 </div>
                 <div class="col-md-6 form-check">
                     <input type="checkbox" class="form-check-input" id="summaryBool" name="summaryBool" />
                     <label for="summaryBool" class="form-check-label">Include Summary Section</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="form-check-input" id="lumpBool" name="lumpBool" />
+                    <label for="lumpBool" class="form-check-label">Include Lump Sum</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="contracts form-check-input" id="off52" name="off52" />
+                    <label for="off52" class="form-check-label">OFF-52</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="contracts form-check-input" id="fac126" name="fac126" />
+                    <label for="fac126" class="form-check-label">FAC-126</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="contracts form-check-input" id="gsa71" name="gsa71" />
+                    <label for="gsa71" class="form-check-label">GSA-71</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="contracts form-check-input" id="gsa84" name="gsa84" />
+                    <label for="gsa84" class="form-check-label">GSA-84</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="contracts form-check-input" id="mhec" name="mhec" />
+                    <label for="mhec" class="form-check-label">MHEC</label>
+                </div>
+                <div class="col-md-6 form-check">
+                    <input type="checkbox" class="contracts form-check-input" id="ny" name="ny" />
+                    <label for="ny" class="form-check-label">NY STATE</label>
                 </div>
             </div>
 
