--- a/public/partials/footer.ejs
+++ b/public/partials/footer.ejs
@@ -1,1 +1,3 @@
-<p class="text-center text-muted">&copy; Copyright <%= new Date().getFullYear(); %> Andrew Loreaux</p>
+<div class="d-flex justify-content-center">
+  <span class="text-muted">&copy; Copyright <%= new Date().getFullYear(); %> Andrew Loreaux</span>
+</div>
