--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html class="h-100" lang='en'>
 
 <head>
-    <%- include('../partials/head.ejs'); %>
+  <%- include('../partials/head.ejs'); %>
 </head>
 
-<body class="container">
-    <header>
-        <%- include('../partials/header.ejs'); %>
-    </header>
-    <main>
-        <div class='mt-2 mb-2'>
-            <h1>Hello, World!</h1>
-        </div>
-    </main>
-    <footer>
-        <%- include('../partials/footer.ejs'); %>
-    </footer>
+<body class="d-flex flex-column h-100">
+  <header>
+    <%- include('../partials/header.ejs'); %>
+  </header>
+  <main>
+    <div class="container">
+      <div class='mt-2 mb-2'>
+        <h1>Hello, World!</h1>
+      </div>
+    </div>
+  </main>
+  <footer class="footer mt-auto py-3">
+    <%- include('../partials/footer.ejs'); %>
+  </footer>
 </body>
 
 </html>
