--- a/public/views/form.ejs
+++ b/public/views/form.ejs
@@ -168,14 +168,15 @@ Section</button>
         </div>-->
 
         <!-- Circles which indicates the steps of the form: -->
-        <div style="text-align:center;margin-top:40px;display:none;">
+        <!--<div style="text-align:center;margin-top:40px;display:none;">
           <span class="step"></span>
           <span class="step"></span>
           <span class="step"></span>
           <span class="step"></span>
-          <!--<span class="step"></span>-->
-        </div>
+          <!--<span class="step"></span>
+        </div>-->
 
+        <!-- TODO: get feedback on how proposal is generated. One button with zip or keep two? -->
         <!-- Action Buttons -->
         <div class="d-flex gap-3 mt-4">
           <button type="button" id="generate-json" class="btn btn-secondary">Generate JSON</button>
