--- a/public/partials/step1.ejs
+++ b/public/partials/step1.ejs
@@ -18,11 +18,11 @@
       <div class="col-md-6">
         <label for="checkbox" class="form-label">Select Pages</label>
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="quoteBool" name="quoteBool" />
+          <input type="checkbox" class="form-check-input" id="quoteBool" name="quoteBool" checked />
           <label for="quoteBool" class="form-check-label">Include Quote Section</label>
         </div>
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="summaryBool" name="summaryBool" />
+          <input type="checkbox" class="form-check-input" id="summaryBool" name="summaryBool" checked />
           <label for="summaryBool" class="form-check-label">Include Summary Section</label>
         </div>
         <div class="form-check">
