commented out unneeded links and search bars at this time

--- a/public/partials/header.ejs
+++ b/public/partials/header.ejs
@@ -16,13 +16,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav me-auto mb-2 mb-lg-0">
-        <a class="nav-link active" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/form">Form</a>
+        <!--<a class="nav-link active" aria-current="page" href="/">Home</a>
+        <a class="nav-link" href="/form">Form</a>-->
       </div>
-      <form class="d-flex" role="search">
+      <!--<form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form>-->
       <button type="button" id="load-json" class="ms-2 btn btn-warning">Load JSON</button>
     </div>
   </div>
